@@ -1,15 +1,11 @@
 /**
- * The contents of this file are subject to the OpenMRS Public License
- * Version 1.0 (the "License"); you may not use this file except in
- * compliance with the License. You may obtain a copy of the License at
- * http://license.openmrs.org
+ * This Source Code Form is subject to the terms of the Mozilla Public License,
+ * v. 2.0. If a copy of the MPL was not distributed with this file, You can
+ * obtain one at http://mozilla.org/MPL/2.0/. OpenMRS is also distributed under
+ * the terms of the Healthcare Disclaimer located at http://openmrs.org/license.
  *
- * Software distributed under the License is distributed on an "AS IS"
- * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
- * License for the specific language governing rights and limitations
- * under the License.
- *
- * Copyright (C) OpenMRS, LLC.  All Rights Reserved.
+ * Copyright (C) OpenMRS Inc. OpenMRS is a registered trademark and the OpenMRS
+ * graphic logo is a trademark of OpenMRS Inc.
  */
 package org.openmrs.api;
 
@@ -22,25 +18,25 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Locale;
+import java.util.Set;
 
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
+import org.mockito.Mockito;
 import org.openmrs.GlobalProperty;
 import org.openmrs.ImplementationId;
 import org.openmrs.User;
 import org.openmrs.api.context.Context;
 import org.openmrs.customdatatype.datatype.BooleanDatatype;
 import org.openmrs.customdatatype.datatype.DateDatatype;
+import org.openmrs.messagesource.MutableMessageSource;
+import org.openmrs.messagesource.impl.MutableResourceBundleMessageSource;
 import org.openmrs.test.BaseContextSensitiveTest;
 import org.openmrs.test.Verifies;
 import org.openmrs.util.HttpClient;
 import org.openmrs.util.OpenmrsConstants;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.cache.CacheManager;
-import org.springframework.cache.interceptor.DefaultKeyGenerator;
 import org.springframework.validation.BindException;
 import org.springframework.validation.Errors;
 
@@ -55,9 +51,6 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 	protected static final String ADMIN_INITIAL_DATA_XML = "org/openmrs/api/include/AdministrationServiceTest-globalproperties.xml";
 	
 	private HttpClient implementationHttpClient;
-	
-	@Autowired
-	CacheManager cacheManager;
 	
 	/**
 	 * Run this before each unit test in this class. It simply assigns the services used in this
@@ -471,7 +464,7 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 	@Verifies(value = "should return all global properties in the database", method = "getAllGlobalProperties()")
 	public void getAllGlobalProperties_shouldReturnAllGlobalPropertiesInTheDatabase() throws Exception {
 		executeDataSet(ADMIN_INITIAL_DATA_XML);
-		Assert.assertEquals(19, Context.getAdministrationService().getAllGlobalProperties().size());
+		Assert.assertEquals(20, Context.getAdministrationService().getAllGlobalProperties().size());
 	}
 	
 	/**
@@ -543,9 +536,9 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		executeDataSet(ADMIN_INITIAL_DATA_XML);
 		AdministrationService as = Context.getAdministrationService();
 		
-		Assert.assertEquals(19, as.getAllGlobalProperties().size());
+		Assert.assertEquals(20, as.getAllGlobalProperties().size());
 		as.purgeGlobalProperty(as.getGlobalPropertyObject("a_valid_gp_key"));
-		Assert.assertEquals(18, as.getAllGlobalProperties().size());
+		Assert.assertEquals(19, as.getAllGlobalProperties().size());
 	}
 	
 	/**
@@ -584,7 +577,7 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 	@Verifies(value = "should not return duplicates even if the global property has them", method = "getAllowedLocales()")
 	public void getAllowedLocales_shouldNotReturnDuplicatesEvenIfTheGlobalPropertyHasThem() throws Exception {
 		Context.getAdministrationService().saveGlobalProperty(
-		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en,fr,es,en"));
+		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_GB,fr,es,en_GB"));
 		Assert.assertEquals(3, Context.getAdministrationService().getAllowedLocales().size());
 	}
 	
@@ -597,10 +590,10 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		// put the global property into the database
 		executeDataSet("org/openmrs/api/include/AdministrationServiceTest-globalproperties.xml");
 		
-		Object value = adminService.getGlobalPropertyValue("valid.integer", new Integer(4));
+		Object value = adminService.getGlobalPropertyValue("valid.integer", Integer.valueOf(4));
 		
 		Assert.assertTrue(value instanceof Integer);
-		Assert.assertEquals(new Integer(1234), value);
+		Assert.assertEquals(Integer.valueOf(1234), value);
 	}
 	
 	/**
@@ -612,9 +605,9 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 		// put the global property into the database
 		executeDataSet("org/openmrs/api/include/AdministrationServiceTest-globalproperties.xml");
 		
-		Object value = adminService.getGlobalPropertyValue("does.not.exist", new Integer(1234));
+		Object value = adminService.getGlobalPropertyValue("does.not.exist", Integer.valueOf(1234));
 		
-		Assert.assertEquals(new Integer(1234), value);
+		Assert.assertEquals(Integer.valueOf(1234), value);
 	}
 	
 	/**
@@ -728,14 +721,14 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 	}
 	
 	/**
-	 * @see AdministrationService#getSearchLocales()
+	 * @see AdministrationService#getSearchLocales(User)
 	 * @verifies exclude not allowed locales
 	 */
 	@Test
 	public void getSearchLocales_shouldExcludeNotAllowedLocales() throws Exception {
 		//given
 		Context.getAdministrationService().saveGlobalProperty(
-		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_US, pl, es"));
+		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_US, en_GB, pl, es"));
 		
 		User user = Context.getAuthenticatedUser();
 		user.setUserProperty(OpenmrsConstants.USER_PROPERTY_PROFICIENT_LOCALES, "es_CL, en_US, pl");
@@ -752,7 +745,7 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 	}
 	
 	/**
-	 * @see AdministrationService#getSearchLocales()
+	 * @see AdministrationService#getSearchLocales(User)
 	 * @verifies include currently selected full locale and langugage
 	 */
 	@Test
@@ -774,7 +767,7 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 	}
 	
 	/**
-	 * @see AdministrationService#getSearchLocales()
+	 * @see AdministrationService#getSearchLocales(User)
 	 * @verifies include users proficient locales
 	 */
 	@Test
@@ -797,68 +790,6 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 	}
 	
 	/**
-	 * @see AdministrationService#getSearchLocales()
-	 * @verifies cache results for an user
-	 */
-	@Test
-	public void getSearchLocales_shouldCacheResultsForAnUser() throws Exception {
-		//given
-		Context.getAdministrationService().saveGlobalProperty(
-		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_GB, en_US, pl"));
-		
-		User user = Context.getAuthenticatedUser();
-		user.setUserProperty(OpenmrsConstants.USER_PROPERTY_PROFICIENT_LOCALES, "en_GB, en_US");
-		Context.getUserService().saveUser(user, null);
-		
-		//when
-		Context.getAdministrationService().getSearchLocales();
-		
-		List<Locale> cachedSearchLocales = getCachedSearchLocalesForCurrentUser();
-		
-		//then
-		Assert.assertTrue("en_GB", cachedSearchLocales.contains(new Locale("en", "GB")));
-		Assert.assertTrue("en_US", cachedSearchLocales.contains(new Locale("en", "US")));
-		Assert.assertFalse("pl", cachedSearchLocales.contains(new Locale("pl")));
-	}
-	
-	/**
-	 * @see AdministrationService#getSearchLocales()
-	 * @verifies update cached results
-	 */
-	@Test
-	public void getSearchLocales_shouldUpdateCachedResults() throws Exception {
-		//given
-		Context.getAdministrationService().saveGlobalProperty(
-		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_GB, en_US, pl"));
-		
-		User user = Context.getAuthenticatedUser();
-		user.setUserProperty(OpenmrsConstants.USER_PROPERTY_PROFICIENT_LOCALES, "en_GB, en_US");
-		Context.getUserService().saveUser(user, null);
-		
-		//when
-		List<Locale> initialSearchLocales = Context.getAdministrationService().getSearchLocales();
-		
-		user = Context.getAuthenticatedUser();
-		user.setUserProperty(OpenmrsConstants.USER_PROPERTY_PROFICIENT_LOCALES, "pl");
-		Context.getUserService().saveUser(user, null);
-		
-		Context.getAdministrationService().getSearchLocales();
-		
-		List<Locale> cachedSearchLocales = getCachedSearchLocalesForCurrentUser();
-		
-		//then
-		Assert.assertTrue("en_US", initialSearchLocales.contains(new Locale("en", "US")));
-		Assert.assertFalse("pl", initialSearchLocales.contains(new Locale("pl")));
-		Assert.assertTrue("pl", cachedSearchLocales.contains(new Locale("pl")));
-	}
-	
-	private List<Locale> getCachedSearchLocalesForCurrentUser() {
-		Object[] params = { Context.getLocale(), Context.getAuthenticatedUser() };
-		Object key = (new DefaultKeyGenerator()).generate(null, null, params);
-		return (List<Locale>) cacheManager.getCache("userSearchLocales").get(key).get();
-	}
-	
-	/**
 	 * @see AdministrationService#validate(Object,Errors)
 	 * @verifies throws APIException if the input is null
 	 */
@@ -867,5 +798,133 @@ public class AdministrationServiceTest extends BaseContextSensitiveTest {
 	public void validate_shouldThrowThrowAPIExceptionIfTheInputIsNull() throws Exception {
 		BindException errors = new BindException(new Object(), "");
 		Context.getAdministrationService().validate(null, errors);
+	}
+	
+	/**
+	 * @see {@link AdministrationService#getPresentationLocales()}
+	 */
+	@Test
+	@Verifies(value = "should return only country locale if both country locale and language locale are specified in allowed list", method = "getPresentationLocales()")
+	public void getPresentationLocales_shouldReturnOnlyCountryLocaleIfBothCountryLocaleAndLanguageLocaleAreSpecifiedInAllowedList()
+	        throws Exception {
+		Context.getAdministrationService().saveGlobalProperty(
+		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_GB, es, es_CL"));
+		
+		List<Locale> locales = new ArrayList<Locale>();
+		locales.add(new Locale("pl", "PL"));
+		locales.add(new Locale("en"));
+		locales.add(new Locale("es"));
+		locales.add(new Locale("es", "CL"));
+		
+		MutableResourceBundleMessageSource mutableResourceBundleMessageSource = Mockito
+		        .mock(MutableResourceBundleMessageSource.class);
+		Mockito.when(mutableResourceBundleMessageSource.getLocales()).thenReturn(locales);
+		
+		MutableMessageSource mutableMessageSource = Context.getMessageSourceService().getActiveMessageSource();
+		Context.getMessageSourceService().setActiveMessageSource(mutableResourceBundleMessageSource);
+		
+		Set<Locale> presentationLocales = Context.getAdministrationService().getPresentationLocales();
+		
+		Context.getMessageSourceService().setActiveMessageSource(mutableMessageSource);
+		
+		Assert.assertEquals(2, presentationLocales.size());
+		Assert.assertTrue("en", presentationLocales.contains(new Locale("en")));
+		Assert.assertTrue("es_CL", presentationLocales.contains(new Locale("es", "CL")));
+	}
+	
+	/**
+	 * @see {@link AdministrationService#getPresentationLocales()}
+	 */
+	@Test
+	@Verifies(value = "should return all country locales if language locale and no country locales are specified in allowed list", method = "getPresentationLocales()")
+	public void getPresentationLocales_shouldReturnAllCountryLocalesIfLanguageLocaleAndNoCountryLocalesAreSpecifiedInAllowedList()
+	        throws Exception {
+		Context.getAdministrationService().saveGlobalProperty(
+		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_GB, es"));
+		
+		List<Locale> locales = new ArrayList<Locale>();
+		locales.add(new Locale("pl", "PL"));
+		locales.add(new Locale("en"));
+		locales.add(new Locale("es"));
+		locales.add(new Locale("es", "CL"));
+		locales.add(new Locale("es", "SN"));
+		
+		MutableResourceBundleMessageSource mutableResourceBundleMessageSource = Mockito
+		        .mock(MutableResourceBundleMessageSource.class);
+		Mockito.when(mutableResourceBundleMessageSource.getLocales()).thenReturn(locales);
+		
+		MutableMessageSource mutableMessageSource = Context.getMessageSourceService().getActiveMessageSource();
+		Context.getMessageSourceService().setActiveMessageSource(mutableResourceBundleMessageSource);
+		
+		Set<Locale> presentationLocales = Context.getAdministrationService().getPresentationLocales();
+		
+		Context.getMessageSourceService().setActiveMessageSource(mutableMessageSource);
+		
+		Assert.assertEquals(3, presentationLocales.size());
+		Assert.assertTrue("es_CL", presentationLocales.contains(new Locale("es", "CL")));
+		Assert.assertTrue("es_SN", presentationLocales.contains(new Locale("es", "SN")));
+		Assert.assertTrue("en", presentationLocales.contains(new Locale("en")));
+	}
+	
+	/**
+	 * @see {@link AdministrationService#getPresentationLocales()}
+	 */
+	@Test
+	@Verifies(value = "should return language locale if country locale is specified in allowed list but country locale message file is missing", method = "getPresentationLocales()")
+	public void getPresentationLocales_shouldReturnLanguageLocaleIfCountryLocaleIsSpecifiedInAllowedListButCountryLocaleMessageFileIsMissing()
+	        throws Exception {
+		Context.getAdministrationService().saveGlobalProperty(
+		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_GB, es_CL"));
+		
+		List<Locale> locales = new ArrayList<Locale>();
+		locales.add(new Locale("pl", "PL"));
+		locales.add(new Locale("en"));
+		locales.add(new Locale("es"));
+		
+		MutableResourceBundleMessageSource mutableResourceBundleMessageSource = Mockito
+		        .mock(MutableResourceBundleMessageSource.class);
+		Mockito.when(mutableResourceBundleMessageSource.getLocales()).thenReturn(locales);
+		
+		MutableMessageSource mutableMessageSource = Context.getMessageSourceService().getActiveMessageSource();
+		Context.getMessageSourceService().setActiveMessageSource(mutableResourceBundleMessageSource);
+		
+		Set<Locale> presentationLocales = Context.getAdministrationService().getPresentationLocales();
+		
+		Context.getMessageSourceService().setActiveMessageSource(mutableMessageSource);
+		
+		Assert.assertEquals(2, presentationLocales.size());
+		Assert.assertTrue("en", presentationLocales.contains(new Locale("en")));
+		Assert.assertTrue("es", presentationLocales.contains(new Locale("es")));
+	}
+	
+	/**
+	 * @see {@link AdministrationService#getPresentationLocales()}
+	 */
+	@Test
+	@Verifies(value = "should return language locale if it is specified in allowed list and there are no country locale message files available", method = "getPresentationLocales()")
+	public void getPresentationLocales_shouldReturnLanguageLocaleIfItIsSpecifiedInAllowedListAndThereAreNoCountryLocaleMessageFilesAvailable()
+	        throws Exception {
+		Context.getAdministrationService().saveGlobalProperty(
+		    new GlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_LOCALE_ALLOWED_LIST, "en_GB, es"));
+		
+		List<Locale> locales = new ArrayList<Locale>();
+		locales.add(new Locale("pl", "PL"));
+		locales.add(new Locale("en"));
+		locales.add(new Locale("es"));
+		
+		MutableResourceBundleMessageSource mutableResourceBundleMessageSource = Mockito
+		        .mock(MutableResourceBundleMessageSource.class);
+		Mockito.when(mutableResourceBundleMessageSource.getLocales()).thenReturn(locales);
+		
+		MutableMessageSource mutableMessageSource = Context.getMessageSourceService().getActiveMessageSource();
+		Context.getMessageSourceService().setActiveMessageSource(mutableResourceBundleMessageSource);
+		
+		Set<Locale> presentationLocales = Context.getAdministrationService().getPresentationLocales();
+		
+		Context.getMessageSourceService().setActiveMessageSource(mutableMessageSource);
+		
+		Assert.assertEquals(2, presentationLocales.size());
+		Assert.assertTrue("en", presentationLocales.contains(new Locale("en")));
+		Assert.assertTrue("es", presentationLocales.contains(new Locale("es")));
 	}
 }
